applications/terra-proplus-production/kubernetes/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: terrafusion-prod
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
